# gfx

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmds.gdb
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: frag.glsl  glyph_frag.glsl  glyph_vert.glsl  vert.glsl
src/: bitstream.c  buffer.c  camera.c  defs.c  defs.h  font.c  font.h  game.c  game.h  glyph_renderer.c  instanced_renderer.c  io.c  keyboard.h  main.c  mat4.c  math.h  renderer.h  result.h  shader.c  shapes.c  strutils.c  triangulation.c  utils.c  utils.h  vec.c  window.c
src/examples/: cubes.c  cubes.h  loading_fonts.c  loading_fonts.h  render_glyphs.c  render_glyphs.h
src/ttf/: cmap.c  dir.c  gasp.c  glyf.c  name.c  os2.c  tables.c  tables.h  types.h
